Parameterize DataPipeline / Chain for compile-time type-flow
Parameterize `DataPipeline<O>`, `Chain<I, O>`, both builders,
`NamedChains<I>`, `TypedChain<O>`, and the body fields of all 15
body-carrying stages. Java's compiler now flows the running type
through `.stage(Stage<? super T, ? extends U>)` calls on the
programmatic builder API.

- `DataPipeline.builder()` returns a `SourcelessBuilder`;
  `.source(SourceStage<T>)` transitions to `Builder<T>`; `.stage(...)`
  returns `Builder<U>` with the new running type.
- The pipeline's output type is captured at build time;
  `DataPipeline<O>.execute()` returns typed `O` with one localized
  unchecked cast (was N casts at every consumer call site).
- `Chain.builder(DataType<I> seedType)` for typed sub-pipelines.
- Deserialized pipelines surface as `DataPipeline<?>`; callers
  narrow via `expectOutput(DataType<T>)`, which verifies the
  runtime output type before casting.
- `EmbedSource.execute()` calls `inner.expectOutput(this.outputType)`
  to surface type mismatches as a clear `IllegalStateException`
  instead of leaking a downstream `ClassCastException`.

Wire format is byte-identical. `ValidationReport` continues to
police the deserialization path; both paths converge at the same
erased internal `List<Stage<?, ?>>`. The 129 `PipelineSerdeTest`
round-trip cases pass unchanged.

Naming pressure on input-anchor prefixes drops with this change -
the type system now carries that information at the call site -
but no class renames in this pass.